# django-py-reverse

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/: README.md
.github/workflows/: test.yaml
django_py_reverse/: __init__.py  urls.py
tests/: test_urls.py
