[tool.poetry]
name = "django-py-reverse"
version = "1.0.1"
description = "Python URL handling for Django (based on django-js-reverse)"
authors = ["Roberto Meza <the@robertpro.dev>"]
maintainers = ["Roberto Meza <the@robertpro.dev>"]
license = "MIT"
readme = ".github/README.md"
package-mode = true
packages = [
    { include = "django_py_reverse" }
]
homepage = "https://github.com/robertpro/django-py-reverse"
repository = "https://github.com/robertpro/django-py-reverse"
keywords = ["django", "url", "reverse", "js", "python", "py"]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Framework :: Django',
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
tox = "^4.18.1"
pytest = "^8.3.2"
pytest-coverage = "^0.0"
coverage = {extras = ["toml"], version = "^7.6.1"}
ruff = "^0.6.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "last",
    "first",
]

[tool.coverage.run]
branch = true
source = ["django_py_reverse"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
